@@ -24,6 +24,11 @@ AC_INIT([GNU Automake], [1.7a], [bug-automake@gnu.org])
 AC_CONFIG_SRCDIR(automake.in)
 AC_CONFIG_AUX_DIR(lib)
 
+# Save the AUTOCONF setting before AM_INIT_AUTOMAKE overrides it;
+# this way we can run Autoconf tests from configure without being
+# bothered by `missing'.
+am_AUTOCONF=${AUTOCONF-autoconf}
+
 AM_INIT_AUTOMAKE([1.6 dist-bzip2])
 
 # The API version is the base version.  We must guarantee
@@ -61,8 +66,10 @@ AC_CHECK_PROG([TEX], [tex], [tex])
 # autom4te.cache).
 mkdir conftest
 echo 'AC''_PREREQ(2.54)' > conftest/conftest.ac
-AM_RUN_LOG([cd conftest && eval $AUTOCONF -o /dev/null conftest.ac]) || {
-   AC_MSG_ERROR([Autoconf 2.54 or better is required])
+AM_RUN_LOG([cd conftest && eval $am_AUTOCONF -o /dev/null conftest.ac]) || {
+   AC_MSG_ERROR([Autoconf 2.54 or better is required.
+  Is it installed?  Is it in your PATH?  (try running `autoconf --version')
+  Is it working?  See also config.log for error messages before this one.])
 }
 rm -rf conftest
 
