@@ -1,4 +1,4 @@
-@set UPDATED 17 November 2002
+@set UPDATED 13 November 2002
 @set UPDATED-MONTH November 2002
 @set EDITION 1.7a
 @set VERSION 1.7a
