@@ -1,3 +1,9 @@
+2002-12-01  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* configure.in: Do not use missing while checking for Autoconf's
+	version, otherwise we won't notice that Autoconf isn't installed.
+	Augment the error message with a few questions to help users.
+
 2002-11-30  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* tests/gnits2.test, tests/gnits3.test: Move the greps inside the
